crates/cli/src/snapshots/mltrs_cli__build_tasks__tests__alignment_tests@shaders__compiled__storage_handle_params.comp.json.snap
---
source: crates/cli/src/build_tasks.rs
info:
  relative_path: shaders/compiled/storage_handle_params.comp.json
---
{
  "sourceFileName": "storage_handle_params.compute.slang",
  "globalParameters": [
    {
      "kind": "parameterBlock",
      "parameterName": "params",
      "elementType": {
        "typeName": "Params",
        "fields": [
          {
            "kind": "descriptorHandle",
            "fieldName": "src",
            "binding": {
              "kind": "uniform",
              "offset": 0,
              "size": 8
            },
            "shape": "sampler2D"
          },
          {
            "kind": "descriptorHandle",
            "fieldName": "dstR",
            "binding": {
              "kind": "uniform",
              "offset": 8,
              "size": 8
            },
            "shape": "rwTexture2D"
          },
          {
            "kind": "descriptorHandle",
            "fieldName": "dstRgba",
            "binding": {
              "kind": "uniform",
              "offset": 16,
              "size": 8
            },
            "shape": "rwTexture2D"
          },
          {
            "kind": "scalar",
            "fieldName": "scale",
            "binding": {
              "kind": "uniform",
              "offset": 24,
              "size": 4
            },
            "scalarType": "float32"
          },
          {
            "kind": "vector",
            "fieldName": "gridSize",
            "binding": {
              "kind": "uniform",
              "offset": 32,
              "size": 8
            },
            "elementCount": 2,
            "elementType": {
              "kind": "scalar",
              "scalarType": "float32"
            }
          }
        ]
      }
    }
  ],
  "computeEntryPoint": {
    "entryPointName": "computeMain",
    "stage": "compute",
    "parameters": []
  },
  "workgroupSize": [
    16,
    16,
    1
  ],
  "pipelineLayout": {
    "descriptorSetLayouts": [
      {
        "bindingRanges": [
          {
            "binding": 0,
            "descriptorType": "constantBuffer",
            "descriptorCount": 1,
            "stageFlags": "all",
            "size": 48
          }
        ]
      }
    ],
    "pushConstantRanges": [],
    "bindlessHeapSet": 1
  }
}
